# runner

./: .gitattributes  .gitignore  .mcp.json  .npmignore  .nsprc  AGENTS.md  AI.md  AI.min.md  AUTH.md  BLUELIBS_RUNNER_QUICKREAD.md  BUILDERS_NEW.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENTERPRISE.md  FINAL_SUMMARY.txt  GUIDE.md  LICENSE.md  MIDDLEWARE-DEPENDENCIES.md  MIGRATION_GUIDE.md  QUICKREAD.md  QUICKSTART_RUST.md  README-NEW.md  README-original.md  README.md  RELEASES.md  RELEASE_6.2.md  RELEASE_6.3.md  RELEASE_6.4.md  RELEASE_NOTES_5.5.md  RELEASE_NOTES_5.6.md  RUST_IMPLEMENTATION_COMPLETE.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  TESTING_GUIDE.md  TUNNELS.md  api-audit-tags-errors-utilities.html  benchmarks.config.json  check_lines.ps1  (+16 more)
.claude/: settings.local.json
docs/: index.html  (+3 more)
runner-native/: Cargo.toml  README.md  REUSE_GUIDE.md  example.js  index.d.ts  index.js  package-lock.json  package.json  standalone_test.rs  test.js
runner-native/src/: lib.rs  models.rs
runner-native/tests/: standalone_models_test.rs
rust-tunnel/: .gitignore  API_GATEWAY.md  ARCHITECTURE.md  ARCHITECTURE_DECISION.md  Cargo.toml  HOW_IT_WORKS.md  IMPLEMENTATION.md  NAPI_IMPLEMENTATION_GUIDE.md  README.md  README_OLD.md  README_TESTS.md  RSJS_ANALYSIS.md  node-worker-flexible-auth.js  node-worker.js  test.sh
rust-tunnel/examples/: auth-strategies.md  comparison.md  node-client-example.js
rust-tunnel/src/: auth.rs  error.rs  handlers.rs  handlers_ipc.rs  lib.rs  main.rs  main_ipc.rs  models.rs  node_worker.rs  task_registry.rs  worker_protocol.rs
(+2787 files in other folders)
