[package]
name = "runner-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
# Reuse these from our existing Rust code!
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
