[package]
name = "rust-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[lib]
name = "rust_tunnel"
path = "src/lib.rs"

[[bin]]
name = "rust-tunnel-server"
path = "src/main.rs"
